--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,8 @@ dist/
 debug/
 .pytest_cache/
 .DS_Store
-docs/_static
-docs/_templates
-docs/_build
+docs/*
+!docs/_build/html/
 **/__pycache__
 **/.venv
 **/.conda
