--- a/requirements.txt
+++ b/requirements.txt
@@ -1,117 +1,119 @@
-altair==5.3.0
-attrs==23.2.0
-blinker==1.7.0
-build==1.2.1
-CacheControl==0.14.0
-cachetools==5.3.3
+absl-py==1.4.0
+altair==5.1.1
+astunparse==1.6.3
+attrs==23.1.0
+boto3==1.26.153
+botocore==1.29.153
+cachetools==5.3.1
 captum==0.7.0
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-cleo==2.1.0
-click==8.1.7
-cloudpickle==3.0.0
-coloredlogs==15.0.1
-contourpy==1.2.1
-crashtest==0.4.1
-cycler==0.12.1
-distlib==0.3.8
-dulwich==0.21.7
-fastjsonschema==2.19.1
-filelock==3.13.4
-flatbuffers==24.3.25
-fonttools==4.51.0
-fsspec==2024.3.1
-gitdb==4.0.11
-GitPython==3.1.43
+charset-normalizer==3.1.0
+click==8.1.3
+cloudpickle==3.1.0
+contourpy==1.1.0
+dill==0.3.9
+distro==1.9.0
+dnspython==2.3.0
+email-validator==2.0.0.post2
+exceptiongroup==1.1.1
+Faker==33.0.0
+fastapi==0.97.0
+filelock==3.12.2
+fonttools==4.40.0
+gast==0.4.0
+gitdb==4.0.10
+google-auth==2.20.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
 graphviz==0.20.3
-h5py==3.11.0
-humanfriendly==10.0
-idna==3.7
-importlib_metadata==7.1.0
+grpcio==1.54.2
+h5py==3.8.0
+hnswlib==0.8.0
+httptools==0.5.0
+idna==3.4
+imageio==2.31.1
+importlib-metadata==6.6.0
+importlib-resources==5.12.0
 iniconfig==2.0.0
-installer==0.7.0
-jaraco.classes==3.4.0
-Jinja2==3.1.3
-joblib==1.4.0
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-keras==2.15.0
-keyring==24.3.1
-kiwisolver==1.4.5
-llvmlite==0.42.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jiter==0.7.1
+jmespath==1.0.1
+joblib==1.2.0
+keras==2.13.1rc0
+lazy_loader==0.2
+libclang==16.0.0
+lime==0.2.0.1
+llvmlite==0.43.0
+Markdown==3.4.3
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.4
-mdurl==0.1.2
-more-itertools==10.2.0
-mpmath==1.3.0
-msgpack==1.0.8
-networkx==3.3
-numba==0.59.1
-numpy==1.26.4
-onnx==1.16.0
-onnx2torch==1.5.14
-onnxruntime==1.17.3
-packaging==24.0
-pandas==2.2.2
-pexpect==4.9.0
-pillow==10.3.0
-pip==23.3.1
-pkginfo==1.10.0
-platformdirs==4.2.0
-pluggy==1.4.0
-poetry==1.8.2
-poetry-core==1.9.0
-poetry-plugin-export==1.7.1
-protobuf==4.25.3
-ptyprocess==0.7.0
-pyarrow==15.0.2
-pycparser==2.22
+matplotlib==3.7.1
+multiprocess==0.70.17
+munkres==1.1.4
+numba==0.60.0
+numpy==1.23.5
+oauthlib==3.2.2
+omnixai==1.3.1
+onnx==1.17.0
+onnx2torch==1.5.15
+openai==1.54.4
+opencv-python==4.7.0.72
+opt-einsum==3.3.0
+orjson==3.9.1
+pandas==2.2.3
+patsy==1.0.1
+Pillow==9.5.0
+pluggy==1.0.0
+protobuf==4.23.2
+pyarrow==13.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pydantic==1.10.9
 pydeck==0.8.1b0
-Pygments==2.17.2
-pyparsing==3.1.2
-pyproject_hooks==1.0.0
-pytest==8.1.1
-python-dateutil==2.9.0.post0
-pytz==2024.1
-rapidfuzz==3.8.1
-referencing==0.34.0
-requests==2.31.0
-requests-toolbelt==1.0.0
-rich==13.7.1
-rpds-py==0.18.0
-scikit-learn==1.4.2
-scipy==1.13.0
-setuptools==68.2.2
-shap==0.45.0
-shellingham==1.5.4
-six==1.16.0
-slicer==0.0.7
+pydicom==2.4.0
+Pympler==1.0.1
+pytest==7.3.2
+python-dotenv==1.0.0
+python-gdcm==3.0.22
+python-multipart==0.0.6
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.4.1
+requests-oauthlib==1.3.1
+rich==13.5.3
+rsa==4.9
+s3transfer==0.6.1
+SALib==1.5.1
+scikit-image==0.21.0
+scikit-learn==1.1.3
+scipy==1.10.1
+shap==0.46.0
+slicer==0.0.8
 smmap==5.0.1
-streamlit==1.33.0
-sympy==1.12
+starlette==0.27.0
+statsmodels==0.14.4
+streamlit==1.24.0
+tabulate==0.9.0
 tenacity==8.2.3
-tensorboard==2.15.2
-tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-macos==2.15.0
-threadpoolctl==3.4.0
-toml==0.10.2
-tomlkit==0.12.4
-toolz==0.12.1
-torch==2.2.2
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow
+termcolor==2.3.0
+threadpoolctl==3.1.0
+tifffile==2023.4.12
+tomli==2.0.1
+torch==2.0.1
 torchinfo==1.8.0
-torchvision==0.17.2
+torchvision==0.15.2
 torchviz==0.0.2
-tornado==6.4
-tqdm==4.66.2
-trove-classifiers==2024.4.10
-typing_extensions==4.11.0
-tzdata==2024.1
-urllib3==2.2.1
-virtualenv==20.25.1
-wheel==0.41.2
-xaivision==0.5.4
-xattr==1.1.0
-zipp==3.18.1
+tzlocal==4.3.1
+ujson==5.8.0
+uvicorn==0.22.0
+uvloop==0.17.0
+vacances-scolaires-france==0.10.0
+validators==0.22.0
+watchfiles==0.19.0
+webencodings==0.5.1
+websockets==11.0.3
+Werkzeug==2.3.6
+wrapt==1.15.0
+xgboost==2.1.2
+zipp==3.15.0
